--- a/mp3.html
+++ b/mp3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="folder\css\mp3.css">
-    <link rel="stylesheet" href="folder\js\mp3.js">
+    <link rel="stylesheet" href="mp3\folder\css\mp3.css">
+    <link rel="stylesheet" href="mp3\folder\js\mp3.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@
     <div class="playlist">
     </div>
   </div>
-<script src="folder\js\mp3.js">
+<script src="mp3\folder\js\mp3.js">
 
 </script>
 </body>
