--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Header -->
       <header>
         <h4>Now playing:</h4>
-        <h2 class="header__h2">String 57th & 9th</h2>
+        <h2 class="header__h2">String 57th & 9tha</h2>
       </header>
   
       <!-- CD -->
