--- a/day7.html
+++ b/day7.html
@@ -14,14 +14,14 @@
         <h2 class="content__heading">Search Tags</h2>
         <div class="content__input">
             <div class="content__input-save">
-                <div class="push">
+                <!-- <div class="push">
                     <span class="content__input-span"></span>
                     <i class="fa-solid fa-xmark icon"></i>
                 </div>
                 <div class="push">
                     <span class="content__input-span"></span>
                     <i class="fa-solid fa-xmark icon"></i>
-                </div>
+                </div> -->
             </div>
             <input type="text" class="input" placeholder="Type and enter">
         </div>
