--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="player">
     <!-- Dashboard -->
-    <div class="dashboard cover" style="background-image: url('https://scontent.fsgn13-2.fna.fbcdn.net/v/t1.6435-9/125789167_1215317562175429_2158964226181395221_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=7fliG-PuaagAX-ysP2G&_nc_oc=AQmKcJtVNTcM7RWM79LIejZNmBBgVv2COv4bK_q91UezDa2l-ua0qUTBBD7cs-yLz1M&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT9kea0K_CTlxeRE_UqpukAbBagrJjTS77Y43EBzaemOsQ&oe=62C8AE50');">
+    <div class="dashboard cover" style="background-image: url('https://scontent.fsgn3-1.fna.fbcdn.net/v/t39.30808-6/285654314_568704951286865_982584594388012617_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=730e14&_nc_ohc=v2cN2THS7KwAX-eBZt8&_nc_ht=scontent.fsgn3-1.fna&oh=00_AT-IiYA8NlXtRJPbB0sxL5-Ch7-23QHiFd6MOHDu-lSdLw&oe=62A7B752');">
       <!-- Header -->
       <header>
         <h4 class="header__h4">Now playing:</h4>
