--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="player">
     <!-- Dashboard -->
-    <div class="dashboard cover" style="background-image: url('https://scontent.fsgn3-1.fna.fbcdn.net/v/t39.30808-6/285654314_568704951286865_982584594388012617_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=730e14&_nc_ohc=v2cN2THS7KwAX-eBZt8&_nc_ht=scontent.fsgn3-1.fna&oh=00_AT-IiYA8NlXtRJPbB0sxL5-Ch7-23QHiFd6MOHDu-lSdLw&oe=62A7B752');">
+    <div class="dashboard cover" style="background-image: url('https://scontent.fsgn13-2.fna.fbcdn.net/v/t39.30808-1/286130970_3115263462069148_7656370663937721984_n.jpg?stp=dst-jpg_p320x320&_nc_cat=108&ccb=1-7&_nc_sid=7206a8&_nc_ohc=PBw5BWmQyFIAX-cH6k4&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT_4EGQmNqJnJbtSGL1xLNqJ0eKXs1O1hL7c8RnHh8EXvw&oe=62A8CF6E');">
       <!-- Header -->
       <header>
         <h4 class="header__h4">Now playing:</h4>
